tests/neg-macros/quote-type-variable-no-inference-3.check
-- Warning: tests/neg-macros/quote-type-variable-no-inference-3.scala:5:22 ---------------------------------------------
5 |    case '{ $_ : F[t, t]; () } => // warn // error
  |                      ^
  |                      Ignored bound <: Comparable[Any]
  |
  |                      Consider defining bounds explicitly:
  |                        '{ type t <: Comparable[Any]; ... }
-- Warning: tests/neg-macros/quote-type-variable-no-inference-3.scala:6:49 ---------------------------------------------
6 |    case '{ type u <: Comparable[`u`]; $_ : F[u, u] } =>
  |                                                 ^
  |                                                 Ignored bound <: Comparable[Any]
  |
  |                                                 Consider defining bounds explicitly:
  |                                                   '{ type u <: Comparable[u] & Comparable[Any]; ... }
-- [E057] Type Mismatch Error: tests/neg-macros/quote-type-variable-no-inference-3.scala:5:20 --------------------------
5 |    case '{ $_ : F[t, t]; () } => // warn // error
  |                    ^
  |                    Type argument t does not conform to upper bound Comparable[t]
  |
  | longer explanation available when compiling with `-explain`
